fixed webkit issue where it was inheriting extra padding into the dropdown trigger block

--- a/css/plugins/_dropdown.scss
+++ b/css/plugins/_dropdown.scss
@@ -215,7 +215,7 @@
   }
 
   .theforce-dropdown-trigger{
-    padding: 0 $theforce-top-item-padding*2.5 0 $theforce-top-item-padding;
+    padding: 0 0 0 $theforce-top-item-padding;
 
     .theforce-dropdown-direction{
       background-color: lighten($theforce-side-bg,  2.5%);
